Add emoji picker with category tabs to chat
- Replace vue-frimousse with vue3-emoji-picker for category navigation
- Add consistent tooltips for emoji, canned responses, and attach buttons
- Fix canned response picker button click not working
- Add error handling for media loading to prevent JS execution blocking

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "lucide-vue-next": "^0.303.0",
     "pinia": "^2.1.7",
     "radix-vue": "^1.4.0",
-    "reka-ui": "^2.6.1",
+    "reka-ui": "^2.7.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul-vue": "^0.4.1",
@@ -30,6 +30,7 @@
     "vue": "^3.4.0",
     "vue-router": "^4.2.5",
     "vue-sonner": "^1.0.0",
+    "vue3-emoji-picker": "^1.1.8",
     "vuedraggable": "^4.1.0",
     "zod": "^3.25.76"
   },
@@ -42,6 +43,8 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.0",
     "autoprefixer": "^10.4.16",
+    "emojibase": "^17.0.0",
+    "emojibase-data": "^17.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.0",
     "postcss": "^8.4.32",
