--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^10.11.1",
     "axios": "^1.6.0",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-vue-next": "^0.303.0",
@@ -28,6 +29,7 @@
     "vaul-vue": "^0.4.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.4.0",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.2.5",
     "vue-sonner": "^1.0.0",
     "vue3-emoji-picker": "^1.1.8",
